; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/trees/extr_whitespace.c_test_merge_trees_whitespace__conflict.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/trees/extr_whitespace.c_test_merge_trees_whitespace__conflict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_index_entry = type { i32, i8*, i32, i8* }

@GIT_MERGE_OPTIONS_INIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"4026a6c83f39c56881c9ac62e7582db9e3d33a4f\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"test.txt\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"c3b1fb31424c98072542cc8e42b48c92e52f494a\00", align 1
@.str.3 = private unnamed_addr constant [41 x i8] c"262f67de0de2e535a59ae1bc3c739601e98c354d\00", align 1
@__const.test_merge_trees_whitespace__conflict.merge_index_entries = private unnamed_addr constant [3 x %struct.merge_index_entry] [%struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i32 0, i32 0), i32 1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i32 0, i32 0), i32 2, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i32 0, i32 0), i32 3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i32 0, i32 0) }], align 16
@repo = common dso_local global i32 0, align 4
@BRANCH_A_EOL = common dso_local global i32 0, align 4
@BRANCH_B_EOL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_trees_whitespace__conflict() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca [3 x %struct.merge_index_entry], align 16
  %4 = load i32, i32* @GIT_MERGE_OPTIONS_INIT, align 4
  store i32 %4, i32* %2, align 4
  %5 = bitcast [3 x %struct.merge_index_entry]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %5, i8* align 16 bitcast ([3 x %struct.merge_index_entry]* @__const.test_merge_trees_whitespace__conflict.merge_index_entries to i8*), i64 96, i1 false)
  %6 = load i32, i32* @repo, align 4
  %7 = load i32, i32* @BRANCH_A_EOL, align 4
  %8 = load i32, i32* @BRANCH_B_EOL, align 4
  %9 = call i32 @merge_trees_from_branches(i32** %1, i32 %6, i32 %7, i32 %8, i32* %2)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = getelementptr inbounds [3 x %struct.merge_index_entry], [3 x %struct.merge_index_entry]* %3, i64 0, i64 0
  %13 = call i32 @merge_test_index(i32* %11, %struct.merge_index_entry* %12, i32 3)
  %14 = call i32 @cl_assert(i32 %13)
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @git_index_free(i32* %15)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @merge_trees_from_branches(i32**, i32, i32, i32, i32*) #2

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i32 @merge_test_index(i32*, %struct.merge_index_entry*, i32) #2

declare dso_local i32 @git_index_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
